--- a/templates/500.html
+++ b/templates/500.html
@@ -14,7 +14,7 @@
                     <p>We're working to fix the issue. Please try again later or contact support if the problem persists.</p>
                 </div>
                 <div class="error-actions">
-                    <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg me-2">
+                    <a href="{{ url_for('main.index') }}" class="btn btn-primary btn-lg me-2">
                         <i class="fas fa-home"></i> Go Home
                     </a>
                     <a href="javascript:history.back()" class="btn btn-outline-secondary btn-lg">
