--- a/templates/client_detail.html
+++ b/templates/client_detail.html
@@ -7,7 +7,7 @@
     <div class="col-12">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{{ url_for('index') }}">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Dashboard</a></li>
                 <li class="breadcrumb-item active">Client Details</li>
             </ol>
         </nav>
@@ -403,7 +403,7 @@
                                     </td>
                                     <td>
                                         <div class="btn-group-vertical">
-                                            <a href="{{ url_for('file_detail', file_id=file.file_id) }}" class="btn btn-outline-primary btn-sm">
+                                            <a href="{{ url_for('main.file_detail', file_id=file.file_id) }}" class="btn btn-outline-primary btn-sm">
                                                 <i class="fas fa-eye me-1"></i>View
                                             </a>
                                             <button class="btn btn-outline-secondary btn-sm" onclick="requestFile('{{ file.file_id }}')">
