--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -88,7 +88,7 @@
                 </h5>
             </div>
             <div class="card-body">
-                <form action="{{ url_for('search') }}" method="GET" id="dashboard-search-form">
+                <form action="{{ url_for('main.search') }}" method="GET" id="dashboard-search-form">
                     <div class="input-group position-relative">
                         <input type="text" class="form-control" name="q" id="dashboard-search" 
                                placeholder="Start typing to search: reference number, client name, case type, keywords..."
@@ -155,7 +155,7 @@
                                     <small class="text-muted">{{ file.last_accessed }}</small>
                                 </td>
                                 <td>
-                                    <a href="{{ url_for('file_detail', file_id=file.file_id) }}" class="btn btn-sm btn-outline-primary">
+                                    <a href="{{ url_for('main.file_detail', file_id=file.file_id) }}" class="btn btn-sm btn-outline-primary">
                                         <i class="fas fa-eye me-1"></i>View
                                     </a>
                                 </td>
