--- a/templates/search.html
+++ b/templates/search.html
@@ -243,7 +243,7 @@
                                         <br><small class="text-muted">{{ file.file_id }}</small>
                                     </td>
                                     <td>
-                                        <a href="{{ url_for('client_detail', client_id=file.client_id) }}" class="text-decoration-none">
+                                        <a href="{{ url_for('main.client_detail', client_id=file.client_id) }}" class="text-decoration-none">
                                             {{ get_client_name(file.client_id) }}
                                         </a>
                                     </td>
@@ -273,7 +273,7 @@
                                         </span>
                                     </td>
                                     <td>
-                                        <a href="{{ url_for('file_detail', file_id=file.file_id) }}" class="btn btn-sm btn-outline-primary">
+                                        <a href="{{ url_for('main.file_detail', file_id=file.file_id) }}" class="btn btn-sm btn-outline-primary">
                                             <i class="fas fa-eye me-1"></i>Details
                                         </a>
                                     </td>
